fix: small bug fixes
